Remove jstree endpoint
